# cmd/web-api/handlers/customer.go
@@ -38,7 +38,7 @@ type Customers struct {
 // @Param limit				query integer  	false 	"Limit, example: 10"
 // @Param offset			query integer  	false 	"Offset, example: 20"
 // @Param include-archived query boolean 	false 	"Included Archived, example: false"
-// @Success 200 {array} customer.Response
+// @Success 200 {array} customer.PagedResponseList
 // @Failure 400 {object} weberror.ErrorResponse
 // @Failure 403 {object} weberror.ErrorResponse
 // @Failure 500 {object} weberror.ErrorResponse
@@ -108,12 +108,7 @@ func (h *Customers) Find(ctx context.Context, w http.ResponseWriter, r *http.Req
 		return err
 	}
 
-	var resp = make([]*customer.Response, len(res))
-	for i, m := range res {
-		resp[i] = m.Response(ctx)
-	}
-
-	return web.RespondJson(ctx, w, resp, http.StatusOK)
+	return web.RespondJson(ctx, w, res, http.StatusOK)
 }
 
 // Read godoc
